--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Bjorn Loyens</a>.
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
