--- a/index.html
+++ b/index.html
@@ -13,28 +13,102 @@
     />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Frontend Mentor | FAQ Accordion Card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your
-    profile page. A reset link will be emailed to you. Can I cancel my
-    subscription? Yes! Send us a message and we’ll process your request no
-    questions asked. Do you provide additional support? Chat and email support
-    is available 24/7. Phone lines are open during normal business hours.
+    <div class="container">
+      <div class="image">
+        <img
+          src="./images/illustration-woman-online-desktop.svg"
+          class="woman"
+          alt=""
+        />
+        <img src="./images/bg-pattern-desktop.svg" class="pattern" alt="" />
+        <img src="./images/illustration-box-desktop.svg" class="box" alt="" />
+      </div>
+      <div class="content">
+        <h1>FAQ</h1>
+        <div class="question">
+          How many team members can I invite?
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+          <span class="question__answer">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.</span
+          >
+        </div>
+        <div class="question">
+          What is the maximum file upload size?
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+          <span class="question__answer">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.</span
+          >
+        </div>
+        <div class="question">
+          How do I reset my password?
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+          <span class="question__answer">
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.</span
+          >
+        </div>
+        <div class="question">
+          Can I cancel my subscription?
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+          <span class="question__answer">
+            Yes! Send us a message and we’ll process your request no questions
+            asked.</span
+          >
+        </div>
+        <div class="question">
+          Do you provide additional support?
+          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 .799l4 4 4-4"
+              stroke="#F47B56"
+              stroke-width="2"
+              fill="none"
+              fill-rule="evenodd"
+            />
+          </svg>
+          <span class="question__answer">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.</span
+          >
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
