--- a/index.html
+++ b/index.html
@@ -17,105 +17,119 @@
   <body>
     <div class="container">
       <div class="image">
-        <div class="wrapper">
-          <img
-            src="./images/illustration-woman-online-desktop.svg"
-            class="woman"
-            alt=""
-          />
-          <img src="./images/bg-pattern-desktop.svg" class="pattern" alt="" />
-        </div>
+        <img
+          src="./images/illustration-woman-online-desktop.svg"
+          class="woman"
+          alt=""
+        />
+        <img src="./images/bg-pattern-desktop.svg" class="pattern" alt="" />
+
         <img src="./images/illustration-box-desktop.svg" class="box" alt="" />
       </div>
       <div class="content">
         <h1>FAQ</h1>
         <div class="question">
-          How many team members can I invite?
-          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1 .799l4 4 4-4"
-              stroke="#F47B56"
-              stroke-width="2"
-              fill="none"
-              fill-rule="evenodd"
-            />
-          </svg>
+          <a href="" class="question__title">
+            <h2>How many team members can I invite?</h2>
+          </a>
+          <a href="" class="question__icon">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <span class="question__answer">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.</span
+          >
         </div>
-        <span class="question__answer">
-          You can invite up to 2 additional users on the Free plan. There is no
-          limit on team members for the Premium plan.</span
-        >
-
         <div class="question">
-          What is the maximum file upload size?
-          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1 .799l4 4 4-4"
-              stroke="#F47B56"
-              stroke-width="2"
-              fill="none"
-              fill-rule="evenodd"
-            />
-          </svg>
+          <a href="" class="question__title">
+            <h2>What is the maximum file upload size?</h2>
+          </a>
+          <a href="" class="question__icon">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <span class="question__answer">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.</span
+          >
         </div>
-        <span class="question__answer">
-          No more than 2GB. All files in your account must fit your allotted
-          storage space.</span
-        >
-
         <div class="question">
-          How do I reset my password?
-          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1 .799l4 4 4-4"
-              stroke="#F47B56"
-              stroke-width="2"
-              fill="none"
-              fill-rule="evenodd"
-            />
-          </svg>
+          <a href="" class="question__title">
+            <h2>How do I reset my password?</h2>
+          </a>
+          <a href="" class="question__icon">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <span class="question__answer">
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.</span
+          >
         </div>
-        <span class="question__answer">
-          Click “Forgot password” from the login page or “Change password” from
-          your profile page. A reset link will be emailed to you.</span
-        >
-
         <div class="question">
-          Can I cancel my subscription?
-          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1 .799l4 4 4-4"
-              stroke="#F47B56"
-              stroke-width="2"
-              fill="none"
-              fill-rule="evenodd"
-            />
-          </svg>
+          <a href="" class="question__title">
+            <h2>Can I cancel my subscription?</h2>
+          </a>
+          <a href="" class="question__icon">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <span class="question__answer">
+            Yes! Send us a message and we’ll process your request no questions
+            asked.</span
+          >
         </div>
-        <span class="question__answer">
-          Yes! Send us a message and we’ll process your request no questions
-          asked.</span
-        >
-
         <div class="question">
-          Do you provide additional support?
-          <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1 .799l4 4 4-4"
-              stroke="#F47B56"
-              stroke-width="2"
-              fill="none"
-              fill-rule="evenodd"
-            />
-          </svg>
+          <a href="" class="question__title">
+            <h2>Do you provide additional support?</h2>
+          </a>
+          <a href="" class="question__icon">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </a>
+          <span class="question__answer"
+            >Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </span>
         </div>
-        <span class="question__answer">
-          Chat and email support is available 24/7. Phone lines are open during
-          normal business hours.</span
-        >
       </div>
     </div>
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
