--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <div class="content">
         <h1>FAQ</h1>
         <div class="question">
-          <a href="" class="question__title question__title--view">
+          <a href="" class="question__title">
             <h2>How many team members can I invite?</h2>
           </a>
-          <a href="" class="question__icon question__icon--view">
+          <a href="" class="question__icon">
             <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
@@ -43,16 +43,16 @@
               />
             </svg>
           </a>
-          <span class="question__answer question__answer--view">
+          <span class="question__answer">
             You can invite up to 2 additional users on the Free plan. There is
             no limit on team members for the Premium plan.</span
           >
         </div>
-        <div class="question">
-          <a href="" class="question__title question__title--view">
+        <div class="question" onclick="toggleClass()">
+          <a href="" class="question__title">
             <h2>What is the maximum file upload size?</h2>
           </a>
-          <a href="" class="question__icon question__icon--view">
+          <a href="" class="question__icon">
             <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
@@ -63,16 +63,16 @@
               />
             </svg>
           </a>
-          <span class="question__answer question__answer--view">
+          <span class="question__answer">
             No more than 2GB. All files in your account must fit your allotted
             storage space.</span
           >
         </div>
-        <div class="question">
-          <a href="" class="question__title question__title--view">
+        <div class="question" onclick="toggleClass()">
+          <a href="" class="question__title">
             <h2>How do I reset my password?</h2>
           </a>
-          <a href="" class="question__icon question__icon--view">
+          <a href="" class="question__icon">
             <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
@@ -83,16 +83,16 @@
               />
             </svg>
           </a>
-          <span class="question__answer question__answer--view">
+          <span class="question__answer">
             Click “Forgot password” from the login page or “Change password”
             from your profile page. A reset link will be emailed to you.</span
           >
         </div>
-        <div class="question">
-          <a href="" class="question__title question__title--view">
+        <div class="question" onclick="toggleClass()">
+          <a href="" class="question__title">
             <h2>Can I cancel my subscription?</h2>
           </a>
-          <a href="" class="question__icon question__icon--view">
+          <a href="" class="question__icon">
             <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
@@ -103,16 +103,16 @@
               />
             </svg>
           </a>
-          <span class="question__answer question__answer--view">
+          <span class="question__answer">
             Yes! Send us a message and we’ll process your request no questions
             asked.</span
           >
         </div>
         <div class="question">
-          <a href="" class="question__title question__title--view">
+          <a href="" class="question__title">
             <h2>Do you provide additional support?</h2>
           </a>
-          <a href="" class="question__icon question__icon--view">
+          <a href="" class="question__icon">
             <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
@@ -123,7 +123,7 @@
               />
             </svg>
           </a>
-          <span class="question__answer question__answer--view"
+          <span class="question__answer"
             >Chat and email support is available 24/7. Phone lines are open
             during normal business hours.
           </span>
