--- a/index.html
+++ b/index.html
@@ -29,100 +29,60 @@
       <div class="content">
         <h1>FAQ</h1>
         <div class="question">
-          <a href="" class="question__title">
-            <h2>How many team members can I invite?</h2>
-          </a>
-          <a href="" class="question__icon">
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1 .799l4 4 4-4"
-                stroke="#F47B56"
-                stroke-width="2"
-                fill="none"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
+          <h2 class="question__title">How many team members can I invite?</h2>
+          <img
+            src="./images/icon-arrow-down.svg"
+            alt=""
+            class="question__icon"
+          />
           <span class="question__answer">
             You can invite up to 2 additional users on the Free plan. There is
             no limit on team members for the Premium plan.</span
           >
         </div>
-        <div class="question" onclick="toggleClass()">
-          <a href="" class="question__title">
-            <h2>What is the maximum file upload size?</h2>
-          </a>
-          <a href="" class="question__icon">
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1 .799l4 4 4-4"
-                stroke="#F47B56"
-                stroke-width="2"
-                fill="none"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
+        <div class="question">
+          <h2 class="question__title">What is the maximum file upload size?</h2>
+          <img
+            src="./images/icon-arrow-down.svg"
+            alt=""
+            class="question__icon"
+          />
           <span class="question__answer">
             No more than 2GB. All files in your account must fit your allotted
             storage space.</span
           >
         </div>
-        <div class="question" onclick="toggleClass()">
-          <a href="" class="question__title">
-            <h2>How do I reset my password?</h2>
-          </a>
-          <a href="" class="question__icon">
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1 .799l4 4 4-4"
-                stroke="#F47B56"
-                stroke-width="2"
-                fill="none"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
+        <div class="question">
+          <h2 class="question__title">How do I reset my password?</h2>
+          <img
+            src="./images/icon-arrow-down.svg"
+            alt=""
+            class="question__icon"
+          />
           <span class="question__answer">
             Click “Forgot password” from the login page or “Change password”
             from your profile page. A reset link will be emailed to you.</span
           >
         </div>
-        <div class="question" onclick="toggleClass()">
-          <a href="" class="question__title">
-            <h2>Can I cancel my subscription?</h2>
-          </a>
-          <a href="" class="question__icon">
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1 .799l4 4 4-4"
-                stroke="#F47B56"
-                stroke-width="2"
-                fill="none"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
+        <div class="question">
+          <h2 class="question__title">Can I cancel my subscription?</h2>
+          <img
+            src="./images/icon-arrow-down.svg"
+            alt=""
+            class="question__icon"
+          />
           <span class="question__answer">
             Yes! Send us a message and we’ll process your request no questions
             asked.</span
           >
         </div>
         <div class="question">
-          <a href="" class="question__title">
-            <h2>Do you provide additional support?</h2>
-          </a>
-          <a href="" class="question__icon">
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1 .799l4 4 4-4"
-                stroke="#F47B56"
-                stroke-width="2"
-                fill="none"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </a>
+          <h2 class="question__title">Do you provide additional support?</h2>
+          <img
+            src="./images/icon-arrow-down.svg"
+            alt=""
+            class="question__icon"
+          />
           <span class="question__answer"
             >Chat and email support is available 24/7. Phone lines are open
             during normal business hours.
